[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/MoonZoon/demo"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "MoonZoon demo"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon" }

actix-web = { version = "=4.0.0-beta.10", features = ["rustls"], default-features = false }
actix-files = { version = "=0.6.0-beta.8", default-features = false }
actix-http = { version = "=3.0.0-beta.11", default-features = false }
